tests/verifier/pass/test3.ial
function void vector_shift()
{
    register int32[3] vec1;
    register uint amt1;
    register uint[3] amt2;

    block entry
    {
        array.shl vec1, amt1;
        array.shl vec1, amt2;

        leave;
    }
}
